correct a z-index issue

--- a/css/src/partials/_site-wide.sass
+++ b/css/src/partials/_site-wide.sass
@@ -17,7 +17,6 @@ body
 /* PAGE HEADER    
 header 
   position: relative
-  z-index: -50
   padding-top: 372px
   padding-bottom: 248px  
   background-image: image_url('dirt.jpg')
