--- a/css/style.css
+++ b/css/style.css
@@ -997,7 +997,6 @@ body {
 /* PAGE HEADER */
 header {
   position: relative;
-  z-index: -50;
   padding-top: 372px;
   padding-bottom: 248px;
   background-image: url('images/dirt.jpg?1300250432');
